[gd_scene load_steps=92 format=2]

[ext_resource path="res://src/characters/Titan.gd" type="Script" id=1]
[ext_resource path="res://src/behavior/HurtAnimationPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://images/placeholders/white.png" type="Texture" id=3]
[ext_resource path="res://images/characters/knight frames/noBKG_KnightIdle_strip.png" type="Texture" id=4]
[ext_resource path="res://images/characters/knight frames/noBKG_KnightDeath_strip.png" type="Texture" id=5]
[ext_resource path="res://images/characters/knight frames/noBKG_KnightAttack_strip.png" type="Texture" id=6]
[ext_resource path="res://sounds/hurt/Player death scream v1.wav" type="AudioStream" id=7]
[ext_resource path="res://src/damage_boxes/Hitbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://images/characters/knight frames/noBKG_KnightRun_strip.png" type="Texture" id=9]
[ext_resource path="res://sounds/hurt/Player hurt scream v1-001.wav" type="AudioStream" id=10]
[ext_resource path="res://sounds/hurt/Player hurt scream v1-002.wav" type="AudioStream" id=11]
[ext_resource path="res://images/characters/knight frames/noBKG_KnightShield_strip.png" type="Texture" id=13]
[ext_resource path="res://images/emotes/emote_exclamation.png" type="Texture" id=14]
[ext_resource path="res://images/emotes/emote_anger.png" type="Texture" id=15]
[ext_resource path="res://images/emotes/emote_stars.png" type="Texture" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.61708, 8.09606 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 576, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 640, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 704, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 768, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 832, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 896, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 288, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 384, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 480, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 576, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 672, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 768, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 864, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 5 )
region = Rect2( 960, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 5 )
region = Rect2( 1056, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 5 )
region = Rect2( 1152, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 5 )
region = Rect2( 1248, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 5 )
region = Rect2( 1344, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 13 )
region = Rect2( 96, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 13 )
region = Rect2( 192, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 13 )
region = Rect2( 288, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 13 )
region = Rect2( 384, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 13 )
region = Rect2( 480, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 13 )
region = Rect2( 576, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 9 )
region = Rect2( 96, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 9 )
region = Rect2( 192, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 9 )
region = Rect2( 288, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 9 )
region = Rect2( 384, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 9 )
region = Rect2( 480, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 9 )
region = Rect2( 576, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 9 )
region = Rect2( 672, 0, 96, 64 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 144, 64 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 6 )
region = Rect2( 144, 0, 144, 64 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 6 )
region = Rect2( 288, 0, 144, 64 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 6 )
region = Rect2( 432, 0, 144, 64 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 6 )
region = Rect2( 576, 0, 144, 64 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 6 )
region = Rect2( 720, 0, 144, 64 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 6 )
region = Rect2( 864, 0, 144, 64 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 6 )
region = Rect2( 1008, 0, 144, 64 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 6 )
region = Rect2( 1152, 0, 144, 64 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 6 )
region = Rect2( 1296, 0, 144, 64 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 6 )
region = Rect2( 1440, 0, 144, 64 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 6 )
region = Rect2( 1584, 0, 144, 64 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 6 )
region = Rect2( 1728, 0, 144, 64 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 6 )
region = Rect2( 1872, 0, 144, 64 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 6 )
region = Rect2( 2016, 0, 144, 64 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 6 )
region = Rect2( 2160, 0, 144, 64 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 6 )
region = Rect2( 2304, 0, 144, 64 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 6 )
region = Rect2( 2448, 0, 144, 64 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 6 )
region = Rect2( 2592, 0, 144, 64 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 6 )
region = Rect2( 2736, 0, 144, 64 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 6 )
region = Rect2( 2880, 0, 144, 64 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 6 )
region = Rect2( 3024, 0, 144, 64 )

[sub_resource type="SpriteFrames" id=69]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "die",
"speed": 10.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "defend",
"speed": 5.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": true,
"name": "walk",
"speed": 12.0
}, {
"frames": [ SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=70]

[sub_resource type="RectangleShape2D" id=71]
extents = Vector2( 27.8591, 50.1087 )

[sub_resource type="Animation" id=72]
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 6, 5, 4, 3, 2, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack" ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("AnimatedSprite/Hitboxes/AttackHitbox")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "enable"
}, {
"args": [  ],
"method": "disable"
} ]
}

[sub_resource type="Animation" id=73]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack" ]
}

[sub_resource type="Animation" id=74]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 4, 5, 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "die" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=75]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}

[sub_resource type="Animation" id=76]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk" ]
}

[node name="Titan" type="KinematicBody2D" groups=[
"characters",
"enemy",
]]
collision_layer = 4
collision_mask = 10
script = ExtResource( 1 )
color = Color( 0.568627, 0.47451, 1, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -13.1484, -2.15962 )
scale = Vector2( 1.44, 3.19 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 69 )
animation = "idle"
frame = 3
playing = true

[node name="Hitboxes" type="Node2D" parent="AnimatedSprite"]
scale = Vector2( 0.5, 0.5 )

[node name="AttackHitbox" parent="AnimatedSprite/Hitboxes" instance=ExtResource( 8 )]
position = Vector2( 21.0138, -13.8172 )
scale = Vector2( 0.318622, -0.0313131 )

[node name="Range" type="Node2D" parent="AnimatedSprite"]
scale = Vector2( 0.5, 0.5 )

[node name="RoamArea2D" type="Area2D" parent="AnimatedSprite/Range"]
position = Vector2( 43.5062, 47.886 )
scale = Vector2( 1.84, 3.52 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/Range/RoamArea2D"]
position = Vector2( 2.04391, -7.00771 )
shape = SubResource( 70 )

[node name="AttackArea2D" type="Area2D" parent="AnimatedSprite/Range"]
position = Vector2( 32.1864, 1.95069 )
scale = Vector2( 1.38296, 0.88 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/Range/AttackArea2D"]
position = Vector2( -22.1404, -10.6117 )
shape = SubResource( 71 )

[node name="Emotes" type="Node2D" parent="AnimatedSprite"]

[node name="emote_stars" type="Sprite" parent="AnimatedSprite/Emotes"]
position = Vector2( 3, -24 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 16 )

[node name="emote_exclamation" type="Sprite" parent="AnimatedSprite/Emotes"]
position = Vector2( 3, -24 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 14 )

[node name="emote_anger" type="Sprite" parent="AnimatedSprite/Emotes"]
position = Vector2( 3, -24 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 15 )

[node name="CenterPivot" type="Position2D" parent="."]

[node name="BulletSpawnArea" type="Position2D" parent="CenterPivot"]
position = Vector2( 120, 0 )

[node name="Overhead" type="Node2D" parent="."]

[node name="HealthBarOverhead" type="TextureProgress" parent="Overhead"]
visible = false
margin_left = -22.7408
margin_top = -47.9462
margin_right = 9.25917
margin_bottom = -15.9462
rect_scale = Vector2( 2, 0.2 )
value = 50.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 3 )
tint_progress = Color( 0.556863, 0.466667, 0.94902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 72 )
"anims/attack (old)" = SubResource( 73 )
anims/die = SubResource( 74 )
anims/idle = SubResource( 75 )
anims/walk = SubResource( 76 )

[node name="HurtAnimationPlayer" parent="AnimationPlayer" instance=ExtResource( 2 )]

[node name="DeathAudio1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
pitch_scale = 1.2
attenuation = 0.5

[node name="DeathAudio2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
pitch_scale = 1.1

[node name="DeathAudio3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
pitch_scale = 1.1

[node name="EmotesTimer" type="Timer" parent="."]

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="EmotesTimer" to="." method="_on_EmotesTimer_timeout"]
